[gd_scene load_steps=18 format=3 uid="uid://cm80f4jfw68if"]

[ext_resource type="Script" path="res://capitulo 1/scripts/cozinha1.gd" id="1_gc5qh"]
[ext_resource type="Texture2D" uid="uid://diaexu2a2su6c" path="res://capitulo 1/assets/Frame 34.png" id="2_w0j2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xvnx1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dg6st"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_onqyo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dcaph"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w2gqf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8on7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_udhmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nttnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0m5k8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_he3y7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bxuyx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pnd0x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57vgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8j7qx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gja8l"]

[node name="Cozinha1" type="Node2D"]
script = ExtResource("1_gc5qh")

[node name="background" type="TextureRect" parent="."]
offset_right = 829.0
offset_bottom = 576.0
texture = ExtResource("2_w0j2h")

[node name="setaL" type="Button" parent="."]
offset_left = 24.0
offset_top = 262.0
offset_right = 75.0
offset_bottom = 316.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_xvnx1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dg6st")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_onqyo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dcaph")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w2gqf")
flat = true

[node name="setaR" type="Button" parent="."]
offset_left = 751.0
offset_top = 257.0
offset_right = 800.0
offset_bottom = 314.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_8on7s")
theme_override_styles/hover = SubResource("StyleBoxEmpty_udhmq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nttnp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0m5k8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_he3y7")
flat = true

[node name="sair" type="Button" parent="."]
offset_left = 21.0
offset_top = 497.0
offset_right = 105.0
offset_bottom = 559.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_bxuyx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pnd0x")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_57vgy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8j7qx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gja8l")
flat = true

[connection signal="pressed" from="setaL" to="." method="_on_seta_l_pressed"]
[connection signal="pressed" from="setaR" to="." method="_on_seta_r_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
